# api/handlers/user.go
@@ -5,8 +5,8 @@ import (
 
 	"github.com/gin-gonic/gin"
 	pb "github.com/saladin2098/forum_api_gateway/genproto"
+	t "github.com/saladin2098/forum_api_gateway/token"
 )
-
 
 // @Router 				/user/register [POST]
 // @Summary 			Creates User
@@ -34,8 +34,9 @@ func (h *Handler) RegisterUser(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error creating user": err.Error()})
 		return
 	}
-	c.JSON(http.StatusCreated,res)
+	c.JSON(http.StatusCreated, res)
 }
+
 // @Router 				/admin/user/all [GET]
 // @Summary 			Gets all User
 // @Description		 	This api Get all Users
@@ -46,12 +47,12 @@ func (h *Handler) RegisterUser(c *gin.Context) {
 // @Success 200 		{object} pb.Users
 // @Failure 400 		string Error
 func (h *Handler) GetUsers(c *gin.Context) {
-	res,err := h.Clients.UserC.GetUsers(c,&pb.Void{})
-	if err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-	c.JSON(http.StatusOK,res)
+	res, err := h.Clients.UserC.GetUsers(c, &pb.Void{})
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, res)
 }
 
 // @Router 				/admin/user/{id} [PUT]
@@ -68,22 +69,22 @@ func (h *Handler) GetUsers(c *gin.Context) {
 func (h *Handler) UpdateUser(c *gin.Context) {
 	id := c.Param("id")
 	var model pb.UserModel
-    if err := c.ShouldBindJSON(&model); err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-    user := pb.User{
-		UserId: id,
-        UserName: model.UserName,
-        Email:    model.Email,
-        Password: model.Password,
-    }
-    res,err := h.Clients.UserC.UpdateUser(c,&user)
-    if err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-    c.JSON(http.StatusOK,res)
+	if err := c.ShouldBindJSON(&model); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	user := pb.User{
+		UserId:   id,
+		UserName: model.UserName,
+		Email:    model.Email,
+		Password: model.Password,
+	}
+	res, err := h.Clients.UserC.UpdateUser(c, &user)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, res)
 }
 
 // @Router 				/admin/user/{id} [DELETE]
@@ -101,12 +102,12 @@ func (h *Handler) DeleteUser(c *gin.Context) {
 	user := &pb.ById{
 		Id: id,
 	}
-    _,err := h.Clients.UserC.DeleteUser(c,user)
-    if err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-    c.JSON(http.StatusOK,gin.H{"message":"user deleted successfully"})
+	_, err := h.Clients.UserC.DeleteUser(c, user)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"message": "user deleted successfully"})
 }
 
 // @Router 				/user/login [POST]
@@ -121,40 +122,55 @@ func (h *Handler) DeleteUser(c *gin.Context) {
 // @Failure 400 		string Error
 func (h *Handler) LoginUser(c *gin.Context) {
 	var log_req pb.LoginReq
-	if err := c.ShouldBindJSON(&log_req); err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-	res,err := h.Clients.UserC.LoginUser(c,&log_req)
-	if err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-	c.JSON(http.StatusOK,res)
+	if err := c.ShouldBindJSON(&log_req); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	res, err := h.Clients.UserC.LoginUser(c, &log_req)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, res)
 }
 
-// @Router 				/user/{username} [GET]
+// @Router 				/user/info [GET]
 // @Summary 			Gets User info
 // @Description		 	This api Gets User info
 // @Tags 				User
 // @Accept 				json
 // @Produce 			json
 // @Security            BearerAuth
-// @Param               username path string true "username"
 // @Success 200 		{object} pb.User
 // @Failure 400 		string Error
 func (h *Handler) GetUserInfo(c *gin.Context) {
-	username := c.Param("username")
+	token := c.GetHeader("Authorization")
+	if token == "" {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Authorization token is required"})
+		return
+	}
+	claims, err := t.ExtractClaim(token)
+	if err != nil {
+		c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+		return
+	}
+	username, ok := claims["username"].(string)
+	if !ok || username == "" {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Username not found in token"})
+		return
+	}
 	user := &pb.ByUsername{
-        Username: username,
-    }
-	res,err := h.Clients.UserC.GetUserInfo(c,user)
-	if err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-	c.JSON(http.StatusOK,res)
+		Username: username,
+	}
+	res, err := h.Clients.UserC.GetUserInfo(c, user)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, res)
 }
+
+
 // @Router 				/user/posts/{id} [GET]
 // @Summary 			Gets Posts of User
 // @Description		 	This api Gets Posts of User
@@ -170,10 +186,10 @@ func (h *Handler) GetUserPosts(c *gin.Context) {
 	filter := pb.PostFilter{
 		UserId: id,
 	}
-	res,err := h.Clients.PostC.GetPosts(c,&filter)
-	if err!= nil {
-        c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-        return
-    }
-	c.JSON(http.StatusOK,res)
+	res, err := h.Clients.PostC.GetPosts(c, &filter)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, res)
 }
